--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,26 +1,27 @@
 .footer {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    background-color: #333;
-    color: white;
-    padding: 1rem;
-    text-align: center;
-    left: 0;
-    bottom: 0;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: #333;
+  color: white;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  text-align: center;
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
 
 .footer p {
-    margin: 0;
+  margin: 0;
 }
 
 .footer a {
-    color: #00bfff;
-    text-decoration: none;
-    margin: 0 0.5rem;
+  color: #00bfff;
+  text-decoration: none;
+  margin: 0 0.5rem;
 }
 
 .footer a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
