--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,7 +1,6 @@
 .about {
   font-family: "Inter";
   padding-top: 10rem;
-  padding-left: 12rem;
   padding-bottom: 5rem;
   width: 100%;
   background-color: #f6fff7;
@@ -11,6 +10,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  margin-left: 13rem;
 }
 
 .about-us {
@@ -19,7 +19,7 @@
 }
 
 .about-us p {
-  padding-right: 23rem;
+  margin-right: 24rem;
 }
 
 .founder {
@@ -37,9 +37,9 @@
 }
 
 .founder p {
-  padding-right: 24rem;
+  margin-right: 24rem;
 }
 
 .meet-team p {
-  padding-right: 23rem;
+  margin-right: 24rem;
 }
